namespace java com.moseeker.thrift.gen.dao.struct.wordpressdb
namespace py thrift_gen.gen.dao.struct.wordpressdb


struct WordpressUserPostDO {

	1: optional i32 userId,	//用户编号
	2: optional i32 objectId	//文章编号

}
